--- a/app/index.html
+++ b/app/index.html
@@ -1,23 +1,26 @@
-﻿<html>
+<html>
 
 <head>
     <meta charset="utf-8">
     <title>Flix Bot</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="external/css/botui-theme-default.css" />
-    <link rel="stylesheet" href="external/css/botui.min.css" />
-    <script src="external/js/vue.min.js"></script>
-    <script src="external/js/botui.js"></script>
-    
+    <link rel="stylesheet" href="./external/css/botui-theme-default.css" />
+    <link rel="stylesheet" href="./external/css/botui.min.css" />
 </head>
 
 <body>
-    <div class="botui-app-container" id="flixbot">
-        <bot-ui></bot-ui>
-    </div>
-    <img src="assets/images/flixbot.png" width="204" height="90">
-    <img src="assets/images/moviedb.png" width="204" height="80">
-    <script src="src/js/index.js"></script>
+<img src="assets/images/flixbot.png" width="204" height="90">
+<img src="assets/images/moviedbpng.png" width="205" height="14">
+<div class="botui-app-container" id="flixbot">
+    <bot-ui></bot-ui>
+</div>
+
+<!--<img src="assets/images/textmoviedb-center.png" width="205" height="40">-->
+<script src="external/js/jquery-3.3.1.min.js"></script>
+<script src="external/js/vue.min.js"></script>
+<script src="external/js/botui.js"></script>
+<script src="src/js/index.js"></script>
+
 </body>
 
 </html>
